--- a/neural_style_transfer.ipynb
+++ b/neural_style_transfer.ipynb
@@ -315,6 +315,7 @@
         "    return cost\n",
         "\n",
         "\n",
+        "# references taken from: google colab learning notes",
         "def gram_matrix(A):\n",
         "    channels = int(A.shape[-1])\n",
         "    a = tf.reshape(A, [-1, channels])\n",
