--- a/neural_style_transfer.ipynb
+++ b/neural_style_transfer.ipynb
@@ -314,8 +314,7 @@
         "    cost = tf.reduce_mean(tf.square(a_C - a_G))\n",
         "    return cost\n",
         "\n",
-        "\n",
-        "# references taken from: google colab learning notes",
+        "# references taken from: google colab learning notes\n",
         "def gram_matrix(A):\n",
         "    channels = int(A.shape[-1])\n",
         "    a = tf.reshape(A, [-1, channels])\n",
