--- a/neural_style_transfer.ipynb
+++ b/neural_style_transfer.ipynb
@@ -131,12 +131,14 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "def deprocess(x):\n",
-        "    # perform the inverse of the preprocessiing step\n",
+        "    # perform the inverse of the preprocessing step\n",
+        "    # these are imagenet means which it subtracted\n",
         "    x[:, :, 0] += 103.939\n",
         "    x[:, :, 1] += 116.779\n",
         "    x[:, :, 2] += 123.68\n",
+        "    # BGR to RGB\n",
         "    x = x[:, :, ::-1]\n",
-        "\n",
+        "    # clipping if out of bounds\n",
         "    x = np.clip(x, 0, 255).astype('uint8')\n",
         "    return x\n",
         "\n",
@@ -145,7 +147,7 @@
         "        img = np.squeeze(image, axis = 0)\n",
         "\n",
         "    img = deprocess(img)\n",
-        "    \n",
+        "    # remove boundaries and axis\n",
         "    plt.grid(False)\n",
         "    plt.xticks([])\n",
         "    plt.yticks([])\n",
@@ -278,7 +280,8 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "# i skipped two layers as taken by author\n",
+        "# plz include b2 and b4 if you want\n",
         "style_layers = [\n",
         "    'block1_conv1', \n",
         "    'block3_conv1', \n",
@@ -311,6 +314,7 @@
         "def content_cost(content, generated):\n",
         "    a_C = content_model(content)\n",
         "    a_G = content_model(generated)\n",
+        "    # simple mse\n",
         "    cost = tf.reduce_mean(tf.square(a_C - a_G))\n",
         "    return cost\n",
         "\n",
